2023-08-08T08:09:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5794399606 # 1798
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
* notice: last 14d: unq all: 11 60
* notice: prev accum: outdated-unq outdated-all / unq all: 329 1371 / 341 1433
* notice: next accum: outdated-unq outdated-all / unq all: 330 1373 / 341 1433
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-07-25] / []

2023-08-07T16:08:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5787395951 # 1796
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 12 62
* notice: prev accum: outdated-unq outdated-all / unq all: 328 1369 / 340 1432
* notice: next accum: outdated-unq outdated-all / unq all: 329 1371 / 341 1433
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-24] / [2023-08-07]

2023-08-07T00:39:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5779676158 # 1794
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-07
* notice: last 14d: unq all: 12 63
* notice: prev accum: outdated-unq outdated-all / unq all: 328 1369 / 339 1430
* notice: next accum: outdated-unq outdated-all / unq all: 328 1369 / 340 1432
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-08-06]

2023-08-05T16:07:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5771606171 # 1790