@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-08T08:09:06Z",
+  "timestamp" : "2023-08-08T16:08:38Z",
   "count_outdated" : 1373,
   "uniques_outdated" : 330,
-  "count" : 1433,
-  "uniques" : 341,
+  "count" : 1443,
+  "uniques" : 342,
   "views" : [
     {
       "timestamp": "2023-07-26T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-08T00:00:00Z",
+      "count": 10,
+      "count_minmax": [ 10, 10 ],
+      "count_decinc": [ 0, 10 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
