@@ -1,6 +1,6 @@
 {
-  "count": 60,
-  "uniques": 11,
+  "count": 70,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2023-07-26T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2023-08-07T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-08T00:00:00Z",
+      "count": 10,
       "uniques": 1
     }
   ]
