@@ -1,3 +1,12 @@
+2023-08-08T16:08:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5799328822 # 1799
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
+* notice: last 14d: unq all: 12 70
+* notice: prev accum: outdated-unq outdated-all / unq all: 330 1373 / 341 1433
+* notice: next accum: outdated-unq outdated-all / unq all: 330 1373 / 342 1443
+* notice: prev exec diff / last date diff / accum: unq all: +1 +10 -0 -0 / +1 +10 -0 -0 / 1 10
+* notice: removed / changed dates: [] / [2023-08-08]
+
 2023-08-08T08:09:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5794399606 # 1798
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-08
